--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
-        <div class="container">
+        <div class="container">W
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Morgan Freeman</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+          <h1 class="hero-title mb-4">I am Ibrahim Shaher Alzoriqi</h1>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Mobile App Developer,  "></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -105,10 +105,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                        <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                        <p><span class="title-s">Name: </span> <span>Ibrahim Shaher Alzoriqi</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Mobile App developer</span></p>
+                        <p><span class="title-s">Email: </span> <span>ialzoriqi@yahoo.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>(+967) 772703145</span></p>
                       </div>
                     </div>
                   </div>
