--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
             <section class="Homestyle__Intro-sc-it5a75-0 iEbppx">
                 <div class="home__text">
                     <p>Hello, I’m</p>
-                    <h1>ابراهيم الزريقي </h1>
-                    <p class="adjust"> مهندس برمجيات و مطور تطبيقات الجوال</p>
+                    <h1> Ibrahim Shaher Alzoriqi </h1>
+                    <p class="adjust"> Mobile Application Developer</p>
                     <div class="home__CTA">
-                        <a class="Button-sc-19s561s-0 dxFdrJ cta" href="#">حمل السيفي</a>
+                        <a class="Button-sc-19s561s-0 dxFdrJ cta" href="#">Download Resume</a>
                         <div class="home__social">
                             <a target="__blank" aria-label="github" title="github" href="../github.com/IAlzoriqi.html">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" class="svg-inline--fa fa-github fa-w-16 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
